--- a/index.html
+++ b/index.html
@@ -126,14 +126,14 @@
 <body>
 
     <div class="cover-container">
-        <img src="C:\Users\lenovo\Documents\viora4\blogs\images\Screenshot 2025-03-10 172244.png" alt="Cover Photo" class="cover-image">
+        <img src="Screenshot 2025-03-10 172244.png" alt="Cover Photo" class="cover-image">
         <div class="shadow-cover"></div>      <h1 class="cover-title">"**"Breaking Today: Unfiltered News & Global Updates"**"</h1>
     </div>
 
     <div class="container">
         <div class="card-container">
             <div class="card">
-        <img src="C:\Users\lenovo\Documents\viora4\blogs\images\trump.png" alt="Card 1" class="card-image">
+        <img src="Screenshot 2025-03-11 101056.png" alt="Card 1" class="card-image">
                 <div class="card-content">
                     <h3 class="card-title">"What did Zelenskyy do in Saudi Arabia?"</h3>
                     <p>Latest Trump policy on Ukraine war is america..</p>
@@ -142,7 +142,7 @@
 
             
             <div class="card">
-              <img src="C:\Users\lenovo\Documents\viora4\blogs\images\Screenshot 2025-03-10 203443.png" alt="Card 1" class="card-image">
+              <img src="Screenshot 2025-03-11 090403.png" alt="Card 1" class="card-image">
                       <div class="card-content">
                           <h3 class="card-title">"MrBeast Expands His Business Empire: From YouTube to Billion-Dollar Ventures"</h3>
                           <p>Massive Business Growth & Future Investments..</p>
