--- a/index.html
+++ b/index.html
@@ -11,6 +11,120 @@
             box-sizing: border-box;
         }
 
+/* Add this media query at the end of existing styles */
+@media (max-width: 768px) {
+    .container {
+        padding: 10px;
+    }
+
+    .cover-container {
+        height: 20vh;
+        margin-bottom: 1rem;
+    }
+
+    .cover-title {
+        font-size: 1.5rem;
+        width: 90%;
+        white-space: normal;
+        line-height: 1.3;
+    }
+
+    .card-container {
+        gap: 10px;
+        padding: 10px 0;
+    }
+
+    .card {
+        flex: 0 0 180px;
+    }
+
+    .card-title {
+        font-size: 1em;
+        white-space: normal;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+    }
+
+    .card p {
+        -webkit-line-clamp: 2;
+        font-size: 0.85em;
+    }
+
+    .card a {
+        padding: 8px 15px;
+        font-size: 0.9em;
+    }
+
+    .footer {
+        padding: 30px 15px;
+    }
+
+    .footer-section h3 {
+        font-size: 16px;
+        margin-bottom: 15px;
+    }
+
+    .newsletter-input {
+        flex-direction: column;
+    }
+
+    .newsletter-input input {
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .newsletter-input button {
+        width: 100%;
+    }
+
+    .news-item p {
+        font-size: 0.9em;
+    }
+
+    .news-date {
+        font-size: 0.8em;
+    }
+
+    .footer-links {
+        grid-template-columns: 1fr;
+    }
+
+    .copyright {
+        font-size: 0.9em;
+        margin-top: 30px;
+        padding-top: 20px;
+    }
+
+    .up-arrow {
+        bottom: 20px;
+        right: 20px;
+        width: 40px;
+        height: 40px;
+        font-size: 1.2em;
+    }
+
+    hr {
+        margin: 15px 0;
+    }
+}
+
+/* Add this for very small screens */
+@media (max-width: 480px) {
+    .cover-title {
+        font-size: 1.2rem;
+    }
+
+    .card {
+        flex: 0 0 160px;
+    }
+
+    .card-image {
+        height: 120px;
+    }
+}
+
         .container {
             max-width: 1200px;
             margin: 0 auto;
