--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
     <div class="cover-container">
         <img src="Screenshot 2025-03-10 172244.png" alt="Cover Photo" class="cover-image">
-        <div class="shadow-cover"></div>      <h1 class="cover-title">"**"Breaking Today: Unfiltered News & Global Updates"**"</h1>
+        <div class="shadow-cover"></div>      <h1 class="cover-title">"Blogs And News"</h1>
     </div>
 
     <div class="container">
