--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 <body>
 
     <div class="cover-container">
-        <img src="C:\Users\lenovo\Documents\viora4\blogs\images\Screenshot 2025-03-10 172244.png" alt="Cover Photo" class="cover-image">
+        <img src="Screenshot 2025-03-10 172244.png" alt="Cover Photo" class="cover-image">
         <div class="shadow-cover"></div>      <h1 class="cover-title">"**"Breaking Today: Unfiltered News & Global Updates"**"</h1>
     </div>
 
