--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
             
             <div class="card">
-              <img src="C:\Users\lenovo\Documents\viora4\blogs\images\Screenshot 2025-03-10 203443.png" alt="Card 1" class="card-image">
+              <img src="Screenshot 2025-03-11 090403.png" alt="Card 1" class="card-image">
                       <div class="card-content">
                           <h3 class="card-title">"MrBeast Expands His Business Empire: From YouTube to Billion-Dollar Ventures"</h3>
                           <p>Massive Business Growth & Future Investments..</p>
