--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <div class="container">
         <div class="card-container">
             <div class="card">
-        <img src="C:\Users\lenovo\Documents\viora4\blogs\images\trump.png" alt="Card 1" class="card-image">
+        <img src="Screenshot 2025-03-11 101056.png" alt="Card 1" class="card-image">
                 <div class="card-content">
                     <h3 class="card-title">"What did Zelenskyy do in Saudi Arabia?"</h3>
                     <p>Latest Trump policy on Ukraine war is america..</p>
