--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div class="cover-container">
         <img src="Screenshot 2025-03-10 172244.png" alt="Cover Photo" class="cover-image">
-        <div class="shadow-cover"></div>      <h1 class="cover-title">"**"Breaking Today: Unfiltered News & Global Updates"**"</h1>
+        <div class="shadow-cover"></div>      <h1 class="cover-title">"**"Bogs and News"**"</h1>
     </div>
     <div class="navbar">
         <button class="menu-toggle" onclick="toggleMenu()">☰</button>
