--- a/index.html
+++ b/index.html
@@ -132,10 +132,9 @@
     <div class="navbar">
         <button class="menu-toggle" onclick="toggleMenu()">☰</button>
         <div class="nav-links">
-            <a href="#" class="active">All</a>
+            <a href="https://viora4-blogs.netlify.app/" class="active">Blogs</a>
             <a href="https://viora4.netlify.app/">Home</a>
             <a href="https://viora4-news-blogs.netlify.app/">News</a>
-            <a href="https://viora4-blogs.netlify.app/">Blogs</a>
             <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
             <a href="#"></a>
             <a href="#"></a>
