--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <div class="nav-links">
             <a href="https://viora4-blogs.netlify.app/" class="active">Blogs</a>
             <a href="https://viora4.netlify.app/">Home</a>
+            <a href="https://viora4-latest.netlify.app/">Latest</a>
             <a href="https://viora4-news-blogs.netlify.app/">News</a>
             <a href="https://nouman007pro.github.io/privacy.github.io/">Privacy</a>
             <a href="#"></a>
